--- a/docs/01.语言/01.Go/14.chan.md
+++ b/docs/01.语言/01.Go/14.chan.md
@@ -18,15 +18,103 @@ author:
 
 ## 一、简述
 
-- ……
+- 传统的多线程间通信方式是通常是以共享内存实现的，多个线程同时读写某个内存上的变量，并通过互斥锁解决并发读写问题，<span style="color: red;">需要开发人员手动管理锁，可能会导致竞态条件和死锁问题，以及性能问题</span>；
+- chan 实现了 channel 管道，多个 goroutine 之间可以通过向管道读写数据来进行通信，管道有自己的缓冲区和读写等待队列，<span style="color: red;">即使多个 goroutine 同时发送或接收数据，也不会产生竞态条件和死锁问题</span>，其也是通过锁来解决一些并发问题，但是锁的粒度非常小；
+- 另外，chan 还可以通过 select 语句实现非阻塞式通信，当无法从 chan 读取或写入数据时，<span style="color: red;">可以不阻塞 goroutine，继续处理后续逻辑</span>；共享内存通信时，<span style="color: red;">可能因为竞态条件会存在某个线程长时间获取不到锁，导致整个程序长时间阻塞住无法处理后续逻辑（高并发时的性能瓶颈）</span>；
 
 ## 二、基本原理
 
-- <span style="color: red;">基本的实现逻辑</span>
+- chan 能够创建指定大小的环形缓冲区，该大小也可以是 0，并分别创建了用于 goroutine 阻塞等待的生产队列和消费队列；
+- 当 goroutine 从 chan 中读写数据时，如果能够直接读写数据成功，则操作完后直接返回，并更新索引；
+- 如果因为 chan 中没有数据，或是没有等待的生产者写数据，那么**消费者 goroutine 就会进入消费队列阻塞等待，直到管道关闭或有消费者写数据时被唤醒**，并继续后续操作；
+- 如果因为 chan 中数据满了，或是没有等待的消费者读数据，那么**生产者 goroutine 就会进入生产队列阻塞等待，直到管道关闭或有生产者写数据时被唤醒**，并继续后续操作；
+- 如果是通过 select 非阻塞的方式从 chan 中读写数据，**即使无法读写，也不会阻塞等待**，直接返回；
 
 ## 三、基本用法
 
 ### 1，应用场景
+
+#### 1.1 任务定时
+
+- 与 timer 结合，实现超时控制，等待 100 ms 后，如果 s.stopc 还没有读出数据或者被关闭，就直接结束；
+
+::: details
+
+```go
+select {
+	case <-time.After(100 * time.Millisecond):
+	case <-s.stopc:
+		return false
+}
+```
+
+:::
+
+#### 1.2 解耦生产与消费
+
+- 服务启动时，启动 n 个 worker，作为工作协程池，这些协程工作在一个 for {} 无限循环里，从某个 channel 消费工作任务并执行；
+- 5 个工作协程在不断地从工作队列里取任务，生产方只管往 channel 发送任务即可，解耦生产方和消费方；
+
+::: details
+
+```go
+func main() {
+	taskCh := make(chan int, 100)
+	go worker(taskCh)
+
+    // 塞任务
+	for i := 0; i < 10; i++ {
+		taskCh <- i
+	}
+
+    // 等待 1 小时
+	select {
+	case <-time.After(time.Hour):
+	}
+}
+
+func worker(taskCh <-chan int) {
+	const N = 5
+	// 启动 5 个工作协程
+	for i := 0; i < N; i++ {
+		go func(id int) {
+			for {
+				task := <- taskCh
+				fmt.Printf("finish task: %d by worker %d\n", task, id)
+				time.Sleep(time.Second)
+			}
+		}(i)
+	}
+}
+```
+
+:::
+
+#### 1.3 控制并发数
+
+- 构建一个缓冲型的 channel，容量为 3，接着遍历任务列表，每个任务启动一个 goroutine 去完成。真正执行任务在 w() 中完成，在执行 w() 之前，要先往 channel 中写数据，如果阻塞住了，则说明当前执行 w() 任务的 goroutine 已经达到上限；如果写入成功，则说明未达到上线，能够占一个可执行的位置，直接执行，执行完后将数据从 chan 中读取，让出占位给其他 goroutine 继续执行；这样就可以控制同时运行的 w() 数量；
+- 这里，limit <- 1 放在 func 内部而不是外部，如果在外层就是控制系统 goroutine 的数量，可能会阻塞 for 循环，影响业务逻辑；如果 w() 发生 panic，那可能就无法让出占位，因此需要使用 defer 来保证；
+
+::: details
+
+```go
+var limit = make(chan int, 3)
+
+func main() {
+    // …………
+    for _, w := range work {
+        go func() {
+            limit <- 1
+            w()
+            <-limit
+        }()
+    }
+    // …………
+}
+
+```
+
+:::
 
 ### 2，注意事项
 
@@ -35,7 +123,260 @@ author:
 - <span style="color: red;">**向一个已经关闭的管道写数据会 panic；**</span>
 - <span style="color: red;">**向一个 nil 管道读写数据会永久阻塞；**</span>
 
-### 3，简单示例
+### 3，chan 的常见关闭方式
+
+#### 3.1 M 个接收者和一个发送者
+
+- <span style="color: red;">**发送者通过关闭用来传输数据的通道来传递发送结束信号**</span>；
+
+::: details
+
+```go
+package main
+
+import (
+	"time"
+	"math/rand"
+	"sync"
+	"log"
+)
+
+func main() {
+	rand.Seed(time.Now().UnixNano()) // Go 1.20之前需要
+	log.SetFlags(0)
+
+	const Max = 100000
+	const NumReceivers = 100
+
+	wgReceivers := sync.WaitGroup{}
+	wgReceivers.Add(NumReceivers)
+
+	dataCh := make(chan int)
+
+	// 发送者
+	go func() {
+		for {
+			if value := rand.Intn(Max); value == 0 {
+				// 此唯一的发送者可以安全地关闭此数据通道。
+				close(dataCh)
+				return
+			}
+			dataCh <- value
+		}
+	}()
+
+	// 接收者
+	for i := 0; i < NumReceivers; i++ {
+		go func() {
+			defer wgReceivers.Done()
+
+			// 接收数据直到通道dataCh已关闭并且dataCh的缓冲队列已空。
+			for value := range dataCh {
+				log.Println(value)
+			}
+		}()
+	}
+
+	wgReceivers.Wait()
+}
+```
+
+:::
+
+#### 3.2 一个接收者和 N 个发送者
+
+- 不能让接收者关闭用来传输数据的通道来停止数据传输，因为这样做违反了通道关闭原则；
+- <span style="color: red;">**可以让接收者关闭一个额外的信号通道来通知发送者不要再发送数据了；**</span>
+- 对于此额外的信号通道 stopCh，它只有一个发送者，即 dataCh 数据通道的唯一接收者，dataCh 数据通道的接收者关闭了信号通道 stopCh，这是不违反通道关闭原则的；
+- 在此例中，数据通道 dataCh 并没有被关闭，当一个通道不再被任何协程所使用后，它将逐渐被垃圾回收掉，无论它是否已经被关闭；
+
+::: details
+
+```go
+package main
+
+import (
+	"time"
+	"math/rand"
+	"sync"
+	"log"
+)
+
+func main() {
+	rand.Seed(time.Now().UnixNano()) // Go 1.20之前需要
+	log.SetFlags(0)
+
+	const Max = 100000
+	const NumSenders = 1000
+
+	wgReceivers := sync.WaitGroup{}
+	wgReceivers.Add(1)
+
+	dataCh := make(chan int)
+	stopCh := make(chan struct{})
+	// stopCh是一个额外的信号通道。它的发送者为dataCh数据通道的接收者。它的接收者为dataCh数据通道的发送者。
+
+	// 发送者
+	for i := 0; i < NumSenders; i++ {
+		go func() {
+			for {
+				// 这里的第一个尝试接收用来让此发送者协程尽早地退出。对于这个特定的例子，此select代码块并非必需。
+				select {
+				case <- stopCh:
+					return
+				default:
+				}
+
+				// 即使stopCh已经关闭，此第二个select代码块中的第一个分支仍很有可能在若干个循环步内依然不会被选中。如果这是不可接受的，则上面的第一个select代码块是必需的。
+				select {
+				case <- stopCh:
+					return
+				case dataCh <- rand.Intn(Max):
+				}
+			}
+		}()
+	}
+
+	// 接收者
+	go func() {
+		defer wgReceivers.Done()
+
+		for value := range dataCh {
+			if value == Max-1 {
+				// 此唯一的接收者同时也是stopCh通道的唯一发送者。尽管它不能安全地关闭dataCh数据通道，但它可以安全地关闭stopCh通道。
+				close(stopCh)
+				return
+			}
+
+			log.Println(value)
+		}
+	}()
+
+	wgReceivers.Wait()
+}
+```
+
+:::
+
+#### 3.3 M 个接收者和 N 个发送者
+
+- 不能让接收者和发送者中的任何一个关闭用来传输数据的通道，也不能让多个接收者之一关闭一个额外的信号通道，这两种做法都违反了通道关闭原则；
+- <span style="color: red;">**可以引入一个中间调解者角色并让其关闭额外的信号通道来通知所有的接收者和发送者结束工作；**</span>
+- 信号通道 toStop 的容量必须至少为 1，如果它的容量为 0，则在中间调解者还未准备好的情况下就已经有某个协程向 toStop 发送信号时，此信号将被抛弃；
+- 也可以不使用尝试发送操作向中间调解者发送信号，但信号通道 toStop 的容量必须至少为数据发送者和数据接收者的数量之和，以防止向其发送数据时（有一个极其微小的可能）导致某些发送者和接收者协程永久阻塞；
+
+::: details
+
+```go
+package main
+
+import (
+	"time"
+	"math/rand"
+	"sync"
+	"log"
+	"strconv"
+)
+
+func main() {
+	rand.Seed(time.Now().UnixNano()) // Go 1.20之前需要
+	log.SetFlags(0)
+
+
+	const Max = 100000
+	const NumReceivers = 10
+	const NumSenders = 1000
+
+	wgReceivers := sync.WaitGroup{}
+	wgReceivers.Add(NumReceivers)
+
+	dataCh := make(chan int)
+	// stopCh是一个额外的信号通道。它的发送者为中间调解者。它的接收者为dataCh数据通道的所有的发送者和接收者。
+	stopCh := make(chan struct{})
+	// toStop是一个用来通知中间调解者让其关闭信号通道stopCh的第二个信号通道。
+	// 此第二个信号通道的发送者为 dataCh 数据通道的所有的发送者和接收者，它的接收者为中间调解者，它必须为一个缓冲通道。
+	toStop := make(chan string, 1)
+
+	var stoppedBy string
+
+	// 中间调解者
+	go func() {
+		stoppedBy = <-toStop
+		close(stopCh)
+	}()
+
+	// 发送者
+	for i := 0; i < NumSenders; i++ {
+		go func(id string) {
+			for {
+				value := rand.Intn(Max)
+				if value == 0 {
+					// 为了防止阻塞，这里使用了一个尝试发送操作来向中间调解者发送信号。
+					select {
+					case toStop <- "发送者#" + id:
+					default:
+					}
+					return
+				}
+
+				// 此处的尝试接收操作是为了让此发送协程尽早退出。标准编译器对尝试接收和尝试发送做了特殊的优化，因而它们的速度很快。
+				select {
+				case <- stopCh:
+					return
+				default:
+				}
+
+				// 即使stopCh已关闭，如果这个select代码块中第二个分支的发送操作是非阻塞的，则第一个分支仍很有可能在若干个循环步内依然不会被选中。
+				// 如果这是不可接受的，则上面的第一个尝试接收操作代码块是必需的。
+				select {
+				case <- stopCh:
+					return
+				case dataCh <- value:
+				}
+			}
+		}(strconv.Itoa(i))
+	}
+
+	// 接收者
+	for i := 0; i < NumReceivers; i++ {
+		go func(id string) {
+			defer wgReceivers.Done()
+
+			for {
+				// 和发送者协程一样，此处的尝试接收操作是为了让此接收协程尽早退出。
+				select {
+				case <- stopCh:
+					return
+				default:
+				}
+
+				// 即使stopCh已关闭，如果这个select代码块中第二个分支的接收操作是非阻塞的，则第一个分支仍很有可能在若干个循环步内依然不会被选中。
+				// 如果这是不可接受的，则上面尝试接收操作代码块是必需的。
+				select {
+				case <- stopCh:
+					return
+				case value := <-dataCh:
+					if value == Max-1 {
+						// 为了防止阻塞，这里使用了一个尝试发送操作来向中间调解者发送信号。
+						select {
+						case toStop <- "接收者#" + id:
+						default:
+						}
+						return
+					}
+
+					log.Println(value)
+				}
+			}
+		}(strconv.Itoa(i))
+	}
+
+	wgReceivers.Wait()
+	log.Println("被" + stoppedBy + "终止了")
+}
+```
+
+:::
 
 ## 四、源码解读
 
@@ -340,8 +681,9 @@ func chansend(c *hchan, ep unsafe.Pointer, block bool, callerpc uintptr) bool {
   - <span style="color: red;">**该 chan 被关闭了，唤醒所有的等待的 goroutine**</span>；
 - 在被其他 goroutine 唤醒前，会先将其从 chan 的生产队列中出队；
 - 被唤醒后，该 goroutine 会与当前的 chan 解除绑定，并判断被唤醒的原因，<span style="color: red;">**如果是因为 chan 关闭而被唤醒则直接 panic，即无法向一个关闭的 chan 写数据**</span>，如果是被其他 goroutine 唤醒则返回 true；
-  
+
 ::: details
+
 ```go
 // send 通过 unlockf 解锁 c，sg 必须已从 c 的消费者队列中出队，ep 必须为非 nil 并指向堆或调用方的堆栈，c 必须是无缓冲或是空的
 func send(c *hchan, sg *sudog, ep unsafe.Pointer, unlockf func(), skip int) {
@@ -378,7 +720,9 @@ func sendDirect(t *_type, sg *sudog, src unsafe.Pointer) {
 	memmove(dst, src, t.size)
 }
 ```
+
 :::
+
 - send 处理无缓冲区或是空管道 c 上的写入操作，**生产者 goroutine 上待写入的值 ep 被复制到消费者 sg，管道 c 必须为空并锁定（此时才能直接在生产者和消费者两个 goroutine 之间拷贝数据）**；
 - 同时将 <span style="color: red;">**sg.success 设置为 true，表示该消费者 goroutine 是因为读到了数据而被唤醒，然后唤醒该 goroutine**</span>；
 
@@ -388,7 +732,9 @@ func sendDirect(t *_type, sg *sudog, src unsafe.Pointer) {
 :::
 
 ### 5，chanrecv
+
 ::: details
+
 ```go
 // <- c 代码的编译入口
 func chanrecv1(c *hchan, elem unsafe.Pointer) {
@@ -526,22 +872,26 @@ func chanrecv(c *hchan, ep unsafe.Pointer, block bool) (selected, received bool)
 	return true, success
 }
 ```
+
 :::
-* chanrecv 用于从管道中接收数据，与 chansend 一样，对于当前 goroutine 是否允许被阻塞，分为不同的处理方式：
-* <span style="color: red;">**如果 chan 为 nil，非阻塞模式下直接返回 false、false，阻塞模式下 goroutine 被挂起，会一直休眠陷入死锁，故直接抛出错误并退出**</span>；
-* 如果 chan 不为 nil，非阻塞模式下，且 chan 为空，如果 chan 没关闭，则直接返回 false、false；如果 chan 已经关闭，则清理 ep 指针中的数据，并返回 true、false；
-* 如果 chan 已经关闭，且无数据，对阻塞模式，同样是清理 ep 指针中的数据，并返回 true、false；
-* 如果 chan 未关闭，或是已经关闭了但还有数据，则尝试从阻塞等待的生产队列中取出一个goroutine：
-  * 如果能够能够取到，无论是阻塞模式还是非阻塞模式，<span style="color: red;">**直接将数据从生产者的 goroutine 拷贝到消费者的 goroutine**</span> 并提前返回 true、true，同上能够避免二次拷贝；
-* 如果没有生产者，且缓冲区还有数据，即使非阻塞型也是能读则读，直接将数据从缓冲区读出索引出拷贝到消费者 goroutine，并封信读出索引和元素个数，提前返回 true、true；
-* 没有生产者，缓冲区没有数据，无论是缓冲管道还是非缓冲管道，消费者 goroutine 此时是无法读取到数据的，对于非阻塞模式，直接返回 false、false；
-* 对于阻塞模式，<span style="color: red;">**将该 goroutine 添加到该 chan 的消费者队列，并挂起阻塞等待直到被唤醒**</span>，唤醒的方式分为两种：
+
+- chanrecv 用于从管道中接收数据，与 chansend 一样，对于当前 goroutine 是否允许被阻塞，分为不同的处理方式：
+- <span style="color: red;">**如果 chan 为 nil，非阻塞模式下直接返回 false、false，阻塞模式下 goroutine 被挂起，会一直休眠陷入死锁，故直接抛出错误并退出**</span>；
+- 如果 chan 不为 nil，非阻塞模式下，且 chan 为空，如果 chan 没关闭，则直接返回 false、false；如果 chan 已经关闭，则清理 ep 指针中的数据，并返回 true、false；
+- 如果 chan 已经关闭，且无数据，对阻塞模式，同样是清理 ep 指针中的数据，并返回 true、false；
+- 如果 chan 未关闭，或是已经关闭了但还有数据，则尝试从阻塞等待的生产队列中取出一个 goroutine：
+  - 如果能够能够取到，无论是阻塞模式还是非阻塞模式，<span style="color: red;">**直接将数据从生产者的 goroutine 拷贝到消费者的 goroutine**</span> 并提前返回 true、true，同上能够避免二次拷贝；
+- 如果没有生产者，且缓冲区还有数据，即使非阻塞型也是能读则读，直接将数据从缓冲区读出索引出拷贝到消费者 goroutine，并封信读出索引和元素个数，提前返回 true、true；
+- 没有生产者，缓冲区没有数据，无论是缓冲管道还是非缓冲管道，消费者 goroutine 此时是无法读取到数据的，对于非阻塞模式，直接返回 false、false；
+- 对于阻塞模式，<span style="color: red;">**将该 goroutine 添加到该 chan 的消费者队列，并挂起阻塞等待直到被唤醒**</span>，唤醒的方式分为两种：
   - <span style="color: red;">**生产者 goroutine 从阻塞等待的消费者队列中获取到该 goroutine 并拷贝数据给它，然后将其唤醒**</span>；
   - <span style="color: red;">**该 chan 被关闭了，唤醒所有的等待的 goroutine**</span>；
-- 在被其他 goroutine 唤醒前，会先将其从 chan 的消费队列中出队；
-- 被唤醒后，该 goroutine 会与当前的 chan 解除绑定，并判断被唤醒的原因，<span style="color: red;">**如果是因为 chan 关闭而被唤醒则返回 true、false，即无法向一个关闭的 chan 写数据**</span>，如果是被其他 goroutine 唤醒则返回 true、true；
+
+* 在被其他 goroutine 唤醒前，会先将其从 chan 的消费队列中出队；
+* 被唤醒后，该 goroutine 会与当前的 chan 解除绑定，并判断被唤醒的原因，<span style="color: red;">**如果是因为 chan 关闭而被唤醒则返回 true、false，即无法向一个关闭的 chan 写数据**</span>，如果是被其他 goroutine 唤醒则返回 true、true；
 
 ::: details
+
 ```go
 // recv 用 unlockf 解锁 c，sg 必须已经从 c 出队，非 nil 的 ep 必须指向堆或调用者的堆栈，c 必须是无缓冲或是满的
 func recv(c *hchan, sg *sudog, ep unsafe.Pointer, unlockf func(), skip int) {
@@ -589,10 +939,12 @@ func recvDirect(t *_type, sg *sudog, dst unsafe.Pointer) {
 	memmove(dst, src, t.size)
 }
 ```
+
 :::
-* recv 处理无缓冲区或是满管道 c 上的读出操作，对于无缓冲管道，直接从生产者 goroutine 拷贝数据到消费者 goroutine
-* 对于缓冲性满管道，写入和读出索引是相同的，直接从管道的读出索引处拷贝数据到消费者者 goroutine，并从生产者 goroutine 拷贝数据到管道的该处，同时更新生产和写入索引；
-* 将发送者协程的数据指针置空，并将 sg.success 置为 true，表示该生产者 goroutine 是因为写入值成功而被唤醒，然后唤醒该 goroutine；
+
+- recv 处理无缓冲区或是满管道 c 上的读出操作，对于无缓冲管道，直接从生产者 goroutine 拷贝数据到消费者 goroutine
+- 对于缓冲性满管道，写入和读出索引是相同的，直接从管道的读出索引处拷贝数据到消费者者 goroutine，并从生产者 goroutine 拷贝数据到管道的该处，同时更新生产和写入索引；
+- 将发送者协程的数据指针置空，并将 sg.success 置为 true，表示该生产者 goroutine 是因为写入值成功而被唤醒，然后唤醒该 goroutine；
 
 ### 6，closechan
 
@@ -672,12 +1024,14 @@ func closechan(c *hchan) {
 ```
 
 :::
-* close 函数用于关闭管道 c，如果 c 是 nil 管道，直接 panic，关闭一个 nil 的 chan 会 panic；
-* close 函数先上一把大锁，将 c 设置为关闭状态，将所有阻塞等待的消费者 goroutine 出队，赋给其一个相应类型的零值，并设置 sg.success 为 false，表示是因为管道关闭而被唤醒的，然后将该 goroutine加入到一个链表中；将所有阻塞等待的生产者 goroutine 出队，同样设置 sg.success 为 false，表示是因为管道关闭而被唤醒的，然后将该 goroutine加入到一个链表中；解锁，然后将该链表中的所有 goroutine 唤醒；
-* 被唤醒后，生产者 goroutine 会继续执行 chansend 函数里 goparkunlock 函数之后的代码，检测到自己是因为 chan 关闭而被唤醒的，直接 panic；消费者 goroutine 同样会继续执行 chanrecv 函数里 goparkunlock 函数之后的代码，检测到自己是因为 chan 关闭而被唤醒的，返回 received 为 false，表示读取的是零值；
-* 关闭 chan 后，对于阻塞等待的消费者而言，会收到一个相应类型的零值，对于阻塞等待的生产者而言，会直接 panic，所以，在不了解 chan 还有没有接收者的情况下，不能贸然关闭 chan；
+
+- close 函数用于关闭管道 c，如果 c 是 nil 管道，直接 panic，关闭一个 nil 的 chan 会 panic；
+- close 函数先上一把大锁，将 c 设置为关闭状态，将所有阻塞等待的消费者 goroutine 出队，赋给其一个相应类型的零值，并设置 sg.success 为 false，表示是因为管道关闭而被唤醒的，然后将该 goroutine 加入到一个链表中；将所有阻塞等待的生产者 goroutine 出队，同样设置 sg.success 为 false，表示是因为管道关闭而被唤醒的，然后将该 goroutine 加入到一个链表中；解锁，然后将该链表中的所有 goroutine 唤醒；
+- 被唤醒后，生产者 goroutine 会继续执行 chansend 函数里 goparkunlock 函数之后的代码，检测到自己是因为 chan 关闭而被唤醒的，直接 panic；消费者 goroutine 同样会继续执行 chanrecv 函数里 goparkunlock 函数之后的代码，检测到自己是因为 chan 关闭而被唤醒的，返回 received 为 false，表示读取的是零值；
+- 关闭 chan 后，对于阻塞等待的消费者而言，会收到一个相应类型的零值，对于阻塞等待的生产者而言，会直接 panic，所以，在不了解 chan 还有没有接收者的情况下，不能贸然关闭 chan；
 
 ### 7，selectnb\*
+
 ::: details
 
 ```go
@@ -706,8 +1060,10 @@ func selectnbsend(c *hchan, elem unsafe.Pointer) (selected bool) {
 ```
 
 :::
-* 在 select 中监听向
 
+- 在 select 语句中通过 case 分支监听向管道 c 中写入数据：
+  - 如果该 select 语句中没有 default 分支，则该语句会编译成`chansend1`，阻塞型的，函数`chansend(c *hchan, ep unsafe.Pointer, block bool, callerpc uintptr)`中的 block 参数为 true，如果无法写入数据时，该 goroutine 会在 chansend 函数中被阻塞并等待；
+  - 如果有 default 分支，则该语句会被编译成`selectnbsend`，即非阻塞型的，block 参数为 false，如果无法写入数据时，该 goroutine 会立即从 chansend 函数中返回，case 分支不会被命中，执行 default 分支代码；
 
 ::: details
 
@@ -740,7 +1096,12 @@ func selectnbrecv(elem unsafe.Pointer, c *hchan) (selected, received bool) {
 
 :::
 
+- 在 select 语句中通过 case 分支监听从管道 c 中读取数据：
+  - 如果该 select 语句中没有 default 分支，如果没有变量接收数据或忽略接收数据该语句会编译成`chanrecv1`，只要有变量接收数据该语句会编译成`chanrecv2`，即阻塞型的，函数`chanrecv(c *hchan, ep unsafe.Pointer, block bool)`中的 block 参数为 true，如果无法读出数据时，该 goroutine 会在 chanrecv 函数中被阻塞并等待；
+  - 如果有 default 分支，则该语句会被编译成`selectnbrecv`，即非阻塞型的，block 参数为 false，如果无法读出数据时，该 goroutine 会立即从 chanrecv 函数中返回，case 分支不会被命中，执行 default 分支代码；
+
 ### 8，辅助函数
+
 :::details
 
 ```go
@@ -784,9 +1145,14 @@ func chanparkcommit(gp *g, chanLock unsafe.Pointer) bool {
 
 :::
 
-* chanbuf 通过指针运算获取 chan 缓冲区中的第 i 个位置上的元素
-* full 函数判断 chan 是否已满，如果没有缓冲区，则查看是否存在消费者；如果有缓冲区, 则比较元素数量和缓冲区长度是否一致；
-* empty 判断 chan 是否为空，如果没有缓冲区，则查看是否存在生产者；如果有缓冲区，则判断元素数量是否为 0；
-* chanparkcommit 用于实现 goroutine 在 chan 上的阻塞和唤醒机制；
+- chanbuf 通过指针运算获取 chan 缓冲区中的第 i 个位置上的元素
+- full 函数判断 chan 是否已满，如果没有缓冲区，则查看是否存在消费者；如果有缓冲区, 则比较元素数量和缓冲区长度是否一致；
+- empty 判断 chan 是否为空，如果没有缓冲区，则查看是否存在生产者；如果有缓冲区，则判断元素数量是否为 0；
+- chanparkcommit 用于实现 goroutine 在 chan 上的阻塞和唤醒机制；
 
-> **参考文章**<br> > [1] [二郎腿的博客](https://erlangtui.top)<br>
+![chan 场景总结](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/image.1sw9ssisznts.jpg)
+
+> **参考文章**<br> 
+> [1] [深度解密 Go 语言之 channel](https://www.cnblogs.com/qcrao-2018/p/11220651.html#channel-%E5%BA%94%E7%94%A8)<br> 
+> [2] [如何优雅地关闭通道](https://gfw.go101.org/article/channel-closing.html)<br> 
+> [3] [深入理解 go chan](https://juejin.cn/post/7175028144812851237)<br>
