finish chan, add picture

--- a/docs/01.语言/01.Go/14.chan.md
+++ b/docs/01.语言/01.Go/14.chan.md
@@ -412,9 +412,9 @@ const (
 
 :::
 
-- hchan 是 chan 的结构体类型，其底层是一个数组，包含数组的地址、长度、数组中元素的个数、元素的大小、元素的类型，以及生产队列、消费队列及其对应的索引；
+- hchan 是 chan 的结构体类型，其底层是一个数组，包含数组的地址、长度、数组中元素的个数、元素的大小、元素的类型，以及生产队列、消费队列及其对应的索引，其基本结构图如下所示；
 - hchanSize 表示了 hchan 结构体所占内存字节数，进行了**字节对齐**，对齐单位为 maxAlign；
-
+![chan基本结构图](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/erlangtui.topimage.239xy9vnbfts.jpg)
 ### 2，waitq
 
 ::: details
