--- a/docs/02.后端技术/03.Docker/00.Docker的基本介绍.md
+++ b/docs/02.后端技术/03.Docker/00.Docker的基本介绍.md
@@ -11,3 +11,107 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
+
+
+## docker 常用命令
+### 1，镜像
+```bash
+# 列出本机的所有/指定 image 文件
+docker images 
+docker image ls [-a] [镜像名]
+
+# 删除 image 文件
+docker image rm [imageName]
+
+# 从仓库抓取镜像，docker.io/library 是官方默认仓库地址和用户名可以省略，版本省略时默认是 latest
+docker image pull docker.io/library/hello-world:v1.0.0
+
+# 上传镜像仓库
+docker image push [OPTIONS] NAME[:TAG]
+
+# 为本地的 image 标注用户名和版本。
+docker image tag [imageName] [username]/[repository]:[tag]
+
+# 删除虚悬镜像
+docker image prune
+
+# 查看镜像历史
+docker image history 
+
+# 构建镜像，. 表示Dockerfile文件路径，-t 指定镜像名和标签，-f 指定文件名
+docker build -t nginx:v3 . [-f filename]
+
+```
+
+### 2，容器
+```bash
+# 列出本机正在运行的容器
+docker container ls
+
+# 列出本机所有容器，包括终止运行的容器
+docker container ls -a
+
+# 删除 container 文件
+docker container rm [containerID]
+
+# 强制删除 container 文件，即使容器在运行
+docker container rm -f [containerID]
+
+# 启动已经生成、已经停止运行的容器文件
+docker [container] start [containerID]
+
+# 重启某个容器
+docker [container] restart [containerID]
+
+# 暂停某个容器的所有进程
+docker [container] pause [containerID]
+
+# 取消暂停
+docker [container] unpause [containerID]
+
+# 终止容器运行，相当于向容器里面的主进程发出 SIGTERM 信号，然后过一段时间再发出 SIGKILL 信号
+docker [container] stop [containerID]
+
+# 终止某个容器实例
+docker [container] kill [containID]
+
+# 查看 docker 容器的输出，即容器里面 Shell 的标准输出
+docker [container] logs [containerID]
+
+# 从正在运行的 Docker 容器里面，将文件拷贝到本机当前目录
+docker container cp [containID]:[/path/to/file] .
+
+# 从镜像创建并运行一个容器，从ubuntu镜像运行容器执行 bash 命令并在容器退出后删除，-i 交互式，-t 终端，-d 后台运行
+docker run -it --rm ubuntu:18.04 bash -d
+
+# 每次从镜像中生成容器实例，没有该镜像时自动从仓库抓取
+docker container run image
+
+# 进入docker容器
+docker container exec -it [containerID] /bin/bash
+
+# 查看容器文件系统的变化
+docker container diff 容器名
+```
+
+### 3，卷
+```bash
+# 创建一个数据卷
+docker volume create my-vol
+
+# 查看所有的数据卷
+docker volume ls
+
+
+```
+
+```bash
+# 输出 docker 容器的详细信息
+docker inspect nofans-tuling
+
+# 查看镜像、容器、数据卷所占用的空间
+docker system df
+
+```
+
+## Dockerfile 指令介绍
