--- a/docs/02.后端技术/03.Docker/00.Docker的基本介绍.md
+++ b/docs/02.后端技术/03.Docker/00.Docker的基本介绍.md
@@ -14,7 +14,7 @@ author:
 
 
 ## docker 常用命令
-### 1，镜像
+### 1, image
 ```bash
 # 列出本机的所有/指定 image 文件
 docker images 
@@ -38,12 +38,12 @@ docker image prune
 # 查看镜像历史
 docker image history 
 
-# 构建镜像，. 表示Dockerfile文件路径，-t 指定镜像名和标签，-f 指定文件名
+# 构建镜像，. 表示Dockerfile中打包应用程序的路径，-t 指定镜像名和标签，-f 指定Dockerfile文件名，当前路径默认可以忽略
 docker build -t nginx:v3 . [-f filename]
 
 ```
 
-### 2，容器
+### 2, container
 ```bash
 # 列出本机正在运行的容器
 docker container ls
@@ -56,6 +56,9 @@ docker container rm [containerID]
 
 # 强制删除 container 文件，即使容器在运行
 docker container rm -f [containerID]
+
+# 从镜像创建容器并命名
+docker container create --name container_name image_name:tag
 
 # 启动已经生成、已经停止运行的容器文件
 docker [container] start [containerID]
@@ -92,9 +95,16 @@ docker container exec -it [containerID] /bin/bash
 
 # 查看容器文件系统的变化
 docker container diff 容器名
+
+# 输出 docker 容器的详细信息
+docker [container] inspect nofans-tuling
+
+# 重命名容器
+docker container rename CONTAINER NEW_NAME
+
 ```
 
-### 3，卷
+### 3, volume
 ```bash
 # 创建一个数据卷
 docker volume create my-vol
@@ -102,16 +112,55 @@ docker volume create my-vol
 # 查看所有的数据卷
 docker volume ls
 
+# 查看数据卷的详细信息
+docker volume inspect my-vol
 
+# 删除卷
+docker volume rm my-vol
+
+# 删除本地所有未使用的卷
+docker volume prune
 ```
 
-```bash
-# 输出 docker 容器的详细信息
-docker inspect nofans-tuling
 
-# 查看镜像、容器、数据卷所占用的空间
+### 4, system
+```bash
+
+# 查看镜像、容器、数据卷所占用的磁盘空间
 docker system df
 
+# 从服务端获取实时事件
+docker system events
+
+# 显示系统详细信息
+docker system info
+
+# 移除未使用的数据
+docker system prune
+```
+
+### 5, network
+```bash
+# 创建一个网络连接
+docker network create net_name
+
+# 连接一个容器到网络
+docker network connect net_name container_name
+
+# 断开容器的网络连接
+docker network disconnect net_name container_name
+
+# 显示网络的详细信息
+docker network inspect net_name
+
+# 列出网络
+docker network ls 
+
+# 移除所有未使用的网络
+docker network prune
+
+# 移除某个网络
+docker network rm net_name
 ```
 
 ## Dockerfile 指令介绍
