--- a/docs/02.后端技术/03.Docker/00.Docker的基本介绍.md
+++ b/docs/02.后端技术/03.Docker/00.Docker的基本介绍.md
@@ -13,7 +13,7 @@ author:
 ---
 
 
-## docker 常用命令
+## 一、docker 常用命令
 ### 1, image
 ```bash
 # 列出本机的所有/指定 image 文件
@@ -163,4 +163,22 @@ docker network prune
 docker network rm net_name
 ```
 
-## Dockerfile 指令介绍
+## 二、Dockerfile 指令介绍
+### FROM
+* 指定基础镜像，以某个镜像为基础，在其上进行定制；
+### RUN
+
+### COPY 
+
+### ADD
+
+### CMD
+
+### WORKDIR
+
+### VOLUME
+
+### ENTRYPOINT
+
+### ENV
+
