--- a/docs/01.语言/02.C++/03.关键字const.md
+++ b/docs/01.语言/02.C++/03.关键字const.md
@@ -36,9 +36,9 @@ int const &d = a;   // 正确
 b = c;              // 错误，不允许改变常引用的值
 ```
 ## 三、常指针
-* 声明方式：<span style="color: red;">**const 变量类型 *变量名，或 变量类型 const *变量名**</span>；
+* 声明方式：<span style="color: red;">**const 变量类型 \*变量名，或 变量类型 const \*变量名**</span>；
 * 该指针的值是其指向变量的地址，可以被改变，所以不需要在声明时被初始化，但<span style="color: red;">**该指针指向的值不允许被改变**</span>；
-* const 修饰的是该指针指向的变量，而不是该指针的值；
+* **const 修饰的是该指针指向的变量，而不是该指针的值**；
 * 示例：
 ```cpp
 int a = 1;          // 正确
@@ -49,9 +49,9 @@ d = &a;             // 正确，允许改变指针变量的值
 *d = 3;             // 错误，不允许改变指针指向的值
 ```
 ## 四、指针常量
-* 声明方式：<span style="color: red;">**变量类型 *const 变量名**</span>；
-* 该指针的值不可以被改变，需要在声明时被初始化，但<span style="color: red;">**该指针指向的指允许被改变**</span>；
-* const 修饰的是该指针的值，而不是该指针指向的值；
+* 声明方式：<span style="color: red;">**变量类型 \*const 变量名**</span>；
+* 该指针的值不可以被改变，需要在声明时被初始化，但<span style="color: red;">**该指针指向的值允许被改变**</span>；
+* **const 修饰的是该指针的值，而不是该指针指向的值**；
 * 示例：
 ```cpp
 int a = 1;          // 正确
