--- a/docs/01.语言/01.Go/15.map.md
+++ b/docs/01.语言/01.Go/15.map.md
@@ -281,7 +281,7 @@ func (b *bmap) keys() unsafe.Pointer {
 	// 桶地址往后偏移 dataOffset
 	return add(unsafe.Pointer(b), dataOffset)
 }
-// 通过顶部哈希值判断某个桶是否正在迁移中
+// 通过顶部哈希值判断某个桶是否已经迁移完成
 func evacuated(b *bmap) bool {
 	h := b.tophash[0]
 	return h > emptyOne && h < minTopHash
@@ -292,7 +292,116 @@ func evacuated(b *bmap) bool {
 * 实际存储过程中，将所有的键连续存储在一起，将所有的值连续存储在一起，能够一定程度上避免 键值/键值 存储方式的所需要的内存对齐；比如`map[int64]byte`，如果以 键值/键值 方式存储，每个键值对需要填充7字节以对齐内存；
 * `overflow`是溢出桶指针，指向该桶的溢出桶；
 
+### 4，makemap
+```go
+func makemap_small() *hmap {
+	h := new(hmap)
+	h.hash0 = fastrand()
+	return h
+}
+```
+* `makemap_small` 为 `make(map[k]v)` 和 `make(map[k]v, hint)` 创建 map，前提是在编译时已知 hint 最多为 bucketCnt，并且需要在堆上分配 hmap，即通过 new 创建 *hmap 指针；
+* 其桶的创建是在 mapassign 函数中完成的，即在插入数据时惰性创建；
 
+```go
+// makemap make(map[k]v, hint) 的实现，如果编译器已经检测到能够在栈上创建 map 或第一个桶，则 h 或 bucket 非空
+// 如果 h 非空，则能够直接在 h 上创建 map, 如果 h.buckets 非空，则指向的 bucket 可以用作第一个存储桶
+func makemap(t *maptype, hint int, h *hmap) *hmap {
+	// 计算需要申请的内存大小，并进行校验
+	mem, overflow := math.MulUintptr(uintptr(hint), t.bucket.size)
+	if overflow || mem > maxAlloc {
+		hint = 0
+	}
+
+	// 初始化 hmap
+	if h == nil {
+		h = new(hmap)
+	}
+	h.hash0 = fastrand()
+
+	// 确定 B 的值，以保证 2^B 个桶能够装下 hint 个元素，且负载因子在约定范围内
+	B := uint8(0)
+	for overLoadFactor(hint, B) {
+		B++ // 桶的数量翻倍
+	}
+	h.B = B
+
+	// 分配哈希表，如果 B == 0，则稍后会延迟分配 buckets 字段（在 mapassign 中） 如果 hint 很大，则将此内存归零可能需要一段时间
+	if h.B != 0 {
+		var nextOverflow *bmap
+		// 获取存储存储桶数组指针和下一个溢出桶指针
+		h.buckets, nextOverflow = makeBucketArray(t, h.B, nil)
+		if nextOverflow != nil {
+			h.extra = new(mapextra)
+			h.extra.nextOverflow = nextOverflow
+		}
+	}
+
+	return h
+}
+```
+* `makemap` 用于创建能够存储 hint 个键值对的 map；
+* 根据 hint 确定 B 的值，以保证 2^B 个桶能够装下 hint 个元素，且负载因子在约定范围内；
+* 如果只需要一个桶，则延迟在 `mapassign` 函数中进行创建；否则，直接通过`makeBucketArray`创建多个桶及一些溢出桶（如果 B 够大）；
+
+::: details
+```go
+// makeBucketArray 用于创建一个存储桶数组，并返回该数组的地址和下一个溢出桶的地址
+// 该存储桶数组在内存上是连续的，溢出桶在内存上也是连续的只是返回首个桶的地址
+// 2^b 是需要分配存储桶的最小数量，当 b<4 时，溢出的可能性不大，不会创建溢出桶
+// 当 b>=4 时，会总共申请 2^b+2^b/16 个桶，由于内存申请策略会向上对齐，实际申请的内存可能足以放下更多的桶
+// 此时，取前 2^b 个桶作为存储桶，后面的为溢出桶，buckets 指向存储桶数组首位地址，nextOverflow 指向首位溢出桶
+// dirtyalloc 应该是 nil 或指向之前由 makeBucketArray 以相同 t 和 b 参数分配的存储桶数组
+// 如果 dirtyalloc 是 nil 则会重新申请内存分配一个新的存储桶数组，否则 dirtyalloc 指向的数组将会被清理掉并被重新被复用为底层数组
+func makeBucketArray(t *maptype, b uint8, dirtyalloc unsafe.Pointer) (buckets unsafe.Pointer, nextOverflow *bmap) {
+	base := bucketShift(b)
+	nbuckets := base
+	// 实际分配桶的数量是 nbuckets，是不小于 base，前 base 个桶依旧为存储桶，base 之后的用作溢出桶
+	// 这些桶在内存上是连续的，每个桶的溢出桶指针是 nil，最后一个桶的溢出桶指针记为非 nil，以标记该桶是最后一个溢出桶了
+
+	if b >= 4 { // 对于小 b，溢出桶的可能性不大，默认不创建溢出桶，添加该条件能够避免计算的开销
+		nbuckets += bucketShift(b - 4) // 额外申请 1/16 存储桶数量的桶，2^b+2^b/16
+		sz := t.bucket.size * nbuckets // nbuckets 个桶所需的内存大小
+		up := roundupsize(sz)          // 将其对齐到最近的较大的2的幂次方数值
+		if up != sz {                  // 如果对齐后的值与原始值不相等，则用对齐后的内存大小计算实际的桶数 nbuckets
+			nbuckets = up / t.bucket.size
+		}
+	}
+
+	if dirtyalloc == nil {
+		// 直接分配一个新的底层数组
+		buckets = newarray(t.bucket, int(nbuckets))
+	} else {
+		// 复用 dirtyalloc 指向的原数组，并将该数组内存清空，t 和 b 与申请 dirtyalloc 时相同，所以原数组大小是满足条件的
+		buckets = dirtyalloc
+		size := t.bucket.size * nbuckets
+		if t.bucket.ptrdata != 0 {
+			// 桶中的元素类型带有指针时，数组内存的清空方式
+			memclrHasPointers(buckets, size)
+		} else {
+			// 桶中的元素类型没有指针时，数组内存的清空方式
+			memclrNoHeapPointers(buckets, size)
+		}
+	}
+
+	if base != nbuckets {
+		// 预先分配了一些溢出桶，为了将跟踪这些溢出桶的开销降至最低，我们使用这样的约定:
+		// 如果预分配的溢出桶的溢出指针为 nil，则通过向后移动指针可以获得更多可用的溢出桶；
+		// 对于最后一个桶的溢出桶的溢出指针，需要一个安全的非空指针，直接用 buckets，以区分该桶为最后一个溢出桶；
+
+		// 前 0 ~ base-1 个桶为存储桶，base ~ nbuckets-1 个桶为溢出桶，这些桶在内存上连续
+		// 通过调用add函数计算下一个溢出桶 nextOverflow 的地址，并将其转换为*bmap类型的指针
+		nextOverflow = (*bmap)(add(buckets, base*uintptr(t.bucketsize)))
+		// 通过调用add函数计算出最后一个桶的地址，并将其转换为*bmap类型的指针
+		last := (*bmap)(add(buckets, (nbuckets-1)*uintptr(t.bucketsize)))
+		// 将 buckets 强制转换为*bmap类型的指针，并赋值给最后一个桶的溢出指针
+		// 即第 nbuckets-1 个桶的溢出桶指针记为非 nil，以标记该桶是最后一个桶了，会在 newoverflow 函数中用到
+		last.setoverflow(t, (*bmap)(buckets))
+	}
+	return buckets, nextOverflow
+}
+```
+:::
 
 
 
